# foodordering

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  db.sqlite3  docker-compose.yml  foodapp.sql  load_menu.py  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Procfile  load_menu.py  manage.py  requirements.txt
backend/foodapp/: __init__.py  celery.py  settings.py  urls.py
backend/order/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  services.py  tasks.py  throttles.py  urls.py  views.py
backend/order/management/commands/: cleanup_checkouts.py  process_outbox.py  purge_customer_pii.py  seed_demo.py
backend/order/migrations/: 0001_initial.py  0002_order_session_id.py  0003_remove_session_id.py  0004_location_order_location.py  0005_populate_locations.py  0006_location_business_nullable.py  0007_location_business_required.py  0008_order_amount_total_order_checkout_idempotency_key_and_more.py
backend/order/tests/: factories.py  test_api.py  test_checkout.py  test_commands.py  test_tasks.py  test_webhooks.py
data/: menu.xlsx
docs/: api.md  architecture.md  runbook.md
foodapp/: settings.py  urls.py
frontend/: .env  .env.example  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vercel.json  vite.config.ts
frontend/e2e/: ordering.spec.ts
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css  index.js  main.tsx  types.ts
frontend/src/api/: client.test.ts  client.ts  foodapp.test.ts  foodapp.ts
frontend/src/components/: Checkout.tsx  Feedback.tsx  Layout.tsx  MenuCard.tsx  MenuItemCard.js  NavBar.js  OrderCard.tsx  OrderModal.js  components.test.tsx  logoutButton.js
frontend/src/components/cart/: CartItemCard.js
frontend/src/components/customization/: Customization.js
frontend/src/components/menu/: MenuItemCard.js
frontend/src/components/misc/: NavBar.js  logoutButton.js
frontend/src/components/order/: OrderItemCard.js  OrderModal.js
frontend/src/context/: AuthContext.js  AuthContext.tsx  CartContext.js  CartContext.test.tsx  CartContext.tsx
frontend/src/lib/: money.test.ts  money.ts
frontend/src/pages/: ActiveOrderPage.js  ActiveOrderPage.tsx  CartPage.js  CartPage.tsx  MenuItemPage.js  MenuItemPage.tsx  MenuPage.js  MenuPage.tsx  MerchantLogin.js  MerchantLoginPage.tsx  MerchantOrders.js  MerchantOrdersPage.tsx
frontend/src/services/: auth.js  menuServices.js  merchantServices.js  orderServices.js
order/: admin.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_menuitem_slug.py  0003_remove_menuitem_in_cart_alter_menuitem_slug_and_more.py  0004_order_orderitem_order.py  0005_order_fulfilled.py  0006_order_ready.py
order/static/order/: item.js  menu.js  styles.css
order/static/order/models/: Cart.js  Item.js  MenuItem.js  Order.js  OrderItem.js
order/static/order/pages/: cart.js  item.js  menu.js  orders.js
order/templates/order/: cart.html  index.html  layout.html  menu.html  menu_item.html
order/templates/order/merchant/: login.html  orders.html
