[project]
name = "foodapp"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "celery[redis]==5.6.3",
  "cryptography==49.0.0",
  "dj-database-url==3.1.2",
  "Django==6.0.7",
  "django-anymail[sendgrid]==15.0",
  "django-cors-headers==4.9.0",
  "django-environ==0.14.0",
  "djangorestframework==3.17.1",
  "gunicorn==26.0.0",
  "psycopg[binary]==3.3.4",
  "python-json-logger==4.1.0",
  "requests==2.34.2",
  "sentry-sdk[django]==2.66.0",
  "stripe==15.3.1",
  "idna==3.18",
  "sqlparse==0.5.5",
  "urllib3==2.7.0",
  "whitenoise==6.12.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]==7.15.2",
  "django-stubs[compatible-mypy]==6.0.7",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pip-tools==7.6.0",
  "ruff==0.15.22",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.per-file-ignores]
"backend/order/migrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
  "backend/manage.py",
  "backend/order/migrations/",
  "backend/order/tests/",
]

[tool.django-stubs]
django_settings_module = "foodapp.settings"

[tool.coverage.run]
source = ["backend"]
omit = [
  "*/migrations/*",
  "*/tests/*",
  "*/asgi.py",
  "*/wsgi.py",
  "*/manage.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
